Mutter ignores scaling factor when sharing a window
When I share a window through xdg-desktop-portal-gtk, obtain stream, configure etc. whatever is needed and then receive stream parameters with video crop metadata, I seem to receive twice that small size information about a window I want to share, which results into window content not fitting to the window. Either the resolution should be upscaled or the stream content downscaled.